--- a/src/css/pages/index.scss
+++ b/src/css/pages/index.scss
@@ -75,6 +75,6 @@
   }
 }
 .swiper-container {
-  width: 100vw;
+  width: 100%;
   height: 400px;
 }
